#machine generated

jcpp_add_dependencies(
	"java.net.http:17.35"
	"jdk.httpserver:17.35"
	"java.base:17.35"
)

add_definitions(-DJCPP_USE_LIB_CURRENT_OBJECT_STACK_CACHE)

include_directories("share/classes")
include_directories("share/native")
include_directories("../main/share/include")

add_subdirectory("share/classes")
add_subdirectory("share/native")

aux_source_directory("share" source_SRCS)

set(local_object ${local_object}
	"$<TARGET_OBJECTS:test-classes>"
	"$<TARGET_OBJECTS:test-classes.com.foo.content_0>"
	"$<TARGET_OBJECTS:test-classes.handlers.bar>"
	"$<TARGET_OBJECTS:test-classes.handlers.foo>"
	"$<TARGET_OBJECTS:test-classes.handlers.jar>"
	"$<TARGET_OBJECTS:test-classes.jdk.internal.ne_1>"
	"$<TARGET_OBJECTS:test-classes.jdk.internal.ne_2>"
	"$<TARGET_OBJECTS:test-classes.jdk.internal.ne_3>"
	"$<TARGET_OBJECTS:test-classes.org.reactivestr_4>"
	"$<TARGET_OBJECTS:test-classes.org.reactivestr_7>"
	"$<TARGET_OBJECTS:test-classes.p>"
)

add_executable(${JCPP_PROJECT_FULL_NAME}-test "${local_object}" "${source_SRCS}")

SET_TARGET_PROPERTIES(${JCPP_PROJECT_FULL_NAME}-test PROPERTIES OUTPUT_NAME "${JCPP_PROJECT_FULL_NAME}-test")
if(JCPP_OS MATCHES "linux")
	SET_TARGET_PROPERTIES(${JCPP_PROJECT_FULL_NAME}-test PROPERTIES INSTALL_RPATH "\\\$ORIGIN;\\\$ORIGIN/../lib")
elseif(JCPP_OS MATCHES "macos")
	SET_TARGET_PROPERTIES(${JCPP_PROJECT_FULL_NAME}-test PROPERTIES INSTALL_RPATH ".;../lib")
endif()

jcpp_encode_symbol(${JCPP_PROJECT_FULL_NAME}-test)

if(BUILD_SHARED_LIB)
	target_link_libraries(${JCPP_PROJECT_FULL_NAME}-test
		PRIVATE ${JCPP_DEPENDENCY_LIBS}
		PRIVATE ${JCPP_PROJECT_NAME}_shared
	)
	add_dependencies(${JCPP_PROJECT_FULL_NAME}-test ${JCPP_PROJECT_NAME}_shared)
	foreach(runtimeFile IN LISTS JCPP_DEPENDENCY_RUNTIME_FILE_PATHS)
		add_custom_command(TARGET ${JCPP_PROJECT_FULL_NAME}-test POST_BUILD
			COMMAND ${CMAKE_COMMAND} -E copy_if_different
				${runtimeFile}
				$<TARGET_FILE_DIR:${JCPP_PROJECT_FULL_NAME}-test>
		)
	endforeach()
	add_custom_command(TARGET ${JCPP_PROJECT_FULL_NAME}-test POST_BUILD
		COMMAND ${CMAKE_COMMAND} -E copy_if_different
			$<TARGET_FILE:${JCPP_PROJECT_NAME}_shared>
			$<TARGET_FILE_DIR:${JCPP_PROJECT_FULL_NAME}-test>
	)
else()

	target_link_libraries(${JCPP_PROJECT_FULL_NAME}-test
		PRIVATE ${JCPP_PROJECT_NAME}_static
		${JCPP_EXT_LIBS}
	)
	add_dependencies(${JCPP_PROJECT_FULL_NAME}-test ${JCPP_PROJECT_NAME}_static)
endif()

jcpp_enable_bigobj(${JCPP_PROJECT_FULL_NAME}-test)

install(TARGETS ${JCPP_PROJECT_FULL_NAME}-test DESTINATION "${JCPP_INSTALL_BIN_DIR}")

add_test(NAME ALPNFailureTest COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> ALPNFailureTest)
add_test(NAME ActionSpace COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> ActionSpace)
add_test(NAME AddURLTest COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> AddURLTest)
add_test(NAME AddressNotSet COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> AddressNotSet)
add_test(NAME AnotherSelectFdsLimit COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> AnotherSelectFdsLimit)
add_test(NAME B4148751 COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> B4148751)
add_test(NAME B4414825 COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> B4414825)
add_test(NAME B4769350 COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> B4769350)
add_test(NAME B4849451 COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> B4849451)
add_test(NAME B4923906 COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> B4923906)
add_test(NAME B4962064 COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> B4962064)
add_test(NAME B5087907 COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> B5087907)
add_test(NAME B6246242 COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> B6246242)
add_test(NAME B6277794 COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> B6277794)
add_test(NAME B6296240 COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> B6296240)
add_test(NAME B6411513 COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> B6411513)
add_test(NAME B6425815 COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> B6425815)
add_test(NAME B6427403 COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> B6427403)
add_test(NAME B6463990 COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> B6463990)
add_test(NAME B6469803 COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> B6469803)
add_test(NAME B6499348 COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> B6499348)
add_test(NAME B6529759 COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> B6529759)
add_test(NAME B6563259 COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> B6563259)
add_test(NAME B6644726 COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> B6644726)
add_test(NAME B6737819 COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> B6737819)
add_test(NAME B6827999 COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> B6827999)
add_test(NAME B6896088 COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> B6896088)
add_test(NAME B8035158 COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> B8035158)
add_test(NAME B8035653 COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> B8035653)
add_test(NAME BadDottedIPAddress COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> BadDottedIPAddress)
add_test(NAME BadIPv6Addresses COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> BadIPv6Addresses)
add_test(NAME BadProxySelector COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> BadProxySelector)
add_test(NAME BasicAuthTest COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> BasicAuthTest)
add_test(NAME BigBacklog COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> BigBacklog)
add_test(NAME BindFailTest COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> BindFailTest)
add_test(NAME BodyProcessorInputStreamTest COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> BodyProcessorInputStreamTest)
add_test(NAME ByteArrayPublishers COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> ByteArrayPublishers)
add_test(NAME CheckBoundaries COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> CheckBoundaries)
add_test(NAME CheckDiscard COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> CheckDiscard)
add_test(NAME Child COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> Child)
add_test(NAME Concurrent COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> Concurrent)
add_test(NAME Constructor COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> Constructor)
add_test(NAME CookieNegativeMaxAge COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> CookieNegativeMaxAge)
add_test(NAME CreateUnresolved COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> CreateUnresolved)
add_test(NAME CustomSocketImplFactory COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> CustomSocketImplFactory)
add_test(NAME DecodeNonEncoded COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> DecodeNonEncoded)
add_test(NAME Decoder COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> Decoder)
add_test(NAME EmptyAuthenticate COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> EmptyAuthenticate)
add_test(NAME EncodeDecode COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> EncodeDecode)
add_test(NAME Equals COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> Equals)
add_test(NAME ExifContentGuesser COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> ExifContentGuesser)
add_test(NAME FindResourceDoesNotThrowException COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> FindResourceDoesNotThrowException)
add_test(NAME GetAuthenticatorTest COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> GetAuthenticatorTest)
add_test(NAME GetContentType COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> GetContentType)
add_test(NAME GetDefaultPort COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> GetDefaultPort)
add_test(NAME GetFileNameMap COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> GetFileNameMap)
add_test(NAME GetLocalAddress COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> GetLocalAddress)
add_test(NAME GetLoopbackAddress COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> GetLoopbackAddress)
add_test(NAME GetMacAddress COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> GetMacAddress)
add_test(NAME GetURLsTest COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> GetURLsTest)
add_test(NAME HandlerLoop COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> HandlerLoop)
add_test(NAME HandlersPkgPrefix COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> HandlersPkgPrefix)
add_test(NAME HandshakeFailureTest COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> HandshakeFailureTest)
add_test(NAME HashCode COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> HashCode)
add_test(NAME HashSpread COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> HashSpread)
add_test(NAME HeadersTest COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> HeadersTest)
add_test(NAME HeadersTest2 COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> HeadersTest2)
add_test(NAME Http1ChunkedTest COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> Http1ChunkedTest)
add_test(NAME HttpInputStreamTest COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> HttpInputStreamTest)
add_test(NAME HttpRequestBuilderTest COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> HttpRequestBuilderTest)
add_test(NAME IDNTest COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> IDNTest)
add_test(NAME IPv4Formats COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> IPv4Formats)
add_test(NAME IPv6AddressTypes COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> IPv6AddressTypes)
add_test(NAME IPv6Numeric COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> IPv6Numeric)
add_test(NAME IllegalArg COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> IllegalArg)
add_test(NAME ImmutableHeaders COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> ImmutableHeaders)
add_test(NAME ImplicitBind COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> ImplicitBind)
add_test(NAME IndexTest COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> IndexTest)
add_test(NAME Inet6AddressSerTest COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> Inet6AddressSerTest)
add_test(NAME Inet6AddressSerializationTest COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> Inet6AddressSerializationTest)
add_test(NAME InheritHandle COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> InheritHandle)
add_test(NAME InternalNameServiceTest COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> InternalNameServiceTest)
add_test(NAME InternalNameServiceWithHostsFileTest COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> InternalNameServiceWithHostsFileTest)
add_test(NAME InternalNameServiceWithNoHostsFileTest COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> InternalNameServiceWithNoHostsFileTest)
add_test(NAME InterruptedBlockingSend COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> InterruptedBlockingSend)
add_test(NAME InterruptibleDatagramSocket COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> InterruptibleDatagramSocket)
add_test(NAME IsHostReachableBug COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> IsHostReachableBug)
add_test(NAME IsReachable COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> IsReachable)
add_test(NAME IsReachableViaLoopbackTest COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> IsReachableViaLoopbackTest)
add_test(NAME LineAdaptersCompileOnly COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> LineAdaptersCompileOnly)
add_test(NAME LocalHostCookie COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> LocalHostCookie)
add_test(NAME LocalSocketAddress COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> LocalSocketAddress)
add_test(NAME LocaleDependentURLTest COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> LocaleDependentURLTest)
add_test(NAME LookupTest COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> LookupTest)
add_test(NAME MethodsTest COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> MethodsTest)
add_test(NAME MultiAuthTest COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> MultiAuthTest)
add_test(NAME MultiThreadedSystemProxies COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> MultiThreadedSystemProxies)
add_test(NAME MulticastTTL COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> MulticastTTL)
add_test(NAME NetParamsTest COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> NetParamsTest)
add_test(NAME NetworkInterfaceEmptyGetInetAddressesTest COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> NetworkInterfaceEmptyGetInetAddressesTest)
add_test(NAME NetworkPrefixLength COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> NetworkPrefixLength)
add_test(NAME NoAction COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> NoAction)
add_test(NAME NonOverridableHandlerFactory COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> NonOverridableHandlerFactory)
add_test(NAME NullArguments COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> NullArguments)
add_test(NAME NullConstructor COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> NullConstructor)
add_test(NAME NullHost COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> NullHost)
add_test(NAME NullURLTest COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> NullURLTest)
add_test(NAME NullUriCookieTest COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> NullUriCookieTest)
add_test(NAME Offset COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> Offset)
add_test(NAME OneExceptionOnly COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> OneExceptionOnly)
add_test(NAME OpenConnection COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> OpenConnection)
add_test(NAME OpenStream COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> OpenStream)
add_test(NAME ParseAuthority COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> ParseAuthority)
add_test(NAME ParseURL COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> ParseURL)
add_test(NAME PlainProxyConnectionTest COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> PlainProxyConnectionTest)
add_test(NAME PortUnreachable COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> PortUnreachable)
add_test(NAME Protocol COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> Protocol)
add_test(NAME ProxyServer COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> ProxyServer)
add_test(NAME Race COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> Race)
add_test(NAME RacyHandler COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> RacyHandler)
add_test(NAME ReadAfterReset COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> ReadAfterReset)
add_test(NAME RelativeEncoding COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> RelativeEncoding)
add_test(NAME RelativePath COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> RelativePath)
add_test(NAME RelativeURL COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> RelativeURL)
add_test(NAME RelativeURLTest COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> RelativeURLTest)
add_test(NAME ReportSocketClosed COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> ReportSocketClosed)
add_test(NAME RequestPropertyValues COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> RequestPropertyValues)
add_test(NAME Responses COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> Responses)
add_test(NAME RestoreURL COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> RestoreURL)
add_test(NAME RestrictedHeadersTest COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> RestrictedHeadersTest)
add_test(NAME Reuse COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> Reuse)
add_test(NAME ReuseBuf COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> ReuseBuf)
add_test(NAME SelectFdsLimit COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> SelectFdsLimit)
add_test(NAME Send12k COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> Send12k)
add_test(NAME SendDatagramToBadAddress COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> SendDatagramToBadAddress)
add_test(NAME SendSize COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> SendSize)
add_test(NAME Serialize COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> Serialize)
add_test(NAME SetBufferSize COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> SetBufferSize)
add_test(NAME SetOption COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> SetOption)
add_test(NAME SetReceiveBufferSize COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> SetReceiveBufferSize)
add_test(NAME SetTTLAndGetTTL COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> SetTTLAndGetTTL)
add_test(NAME SetTTLTo0 COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> SetTTLTo0)
add_test(NAME ShortRequestBody COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> ShortRequestBody)
add_test(NAME ShutdownBoth COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> ShutdownBoth)
add_test(NAME SoTimeout COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> SoTimeout)
add_test(NAME SocketGrowth COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> SocketGrowth)
add_test(NAME SocketPermissionCollection COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> SocketPermissionCollection)
add_test(NAME SpecifyHandler COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> SpecifyHandler)
add_test(NAME Streams COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> Streams)
add_test(NAME StringScope COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> StringScope)
add_test(NAME SubNetworkInterfaceTest COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> SubNetworkInterfaceTest)
add_test(NAME SurrogatePairs COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> SurrogatePairs)
add_test(NAME SystemProxies COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> SystemProxies)
add_test(NAME TIFFContentGuesser COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> TIFFContentGuesser)
add_test(NAME TcpKeepAliveTest COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> TcpKeepAliveTest)
add_test(NAME Test4URI COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> Test4URI)
add_test(NAME Test4URL COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> Test4URL)
add_test(NAME TestAfterClose COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> TestAfterClose)
add_test(NAME TestDefaults COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> TestDefaults)
add_test(NAME TestHttpCookie COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> TestHttpCookie)
add_test(NAME TestIPv6Addresses COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> TestIPv6Addresses)
add_test(NAME TestPort COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> TestPort)
add_test(NAME TestRFC2732 COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> TestRFC2732)
add_test(NAME ThreadStop COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> ThreadStop)
add_test(NAME TimeToLive COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> TimeToLive)
add_test(NAME Timeout COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> Timeout)
add_test(NAME TimeoutOrdering COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> TimeoutOrdering)
add_test(NAME UNCTest COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> UNCTest)
add_test(NAME URIToURLTest2 COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> URIToURLTest2)
add_test(NAME URItoURLTest COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> URItoURLTest)
add_test(NAME URLDecoderArgs COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> URLDecoderArgs)
add_test(NAME URLEncodeDecode COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> URLEncodeDecode)
add_test(NAME URLEncoderEncodeArgs COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> URLEncoderEncodeArgs)
add_test(NAME URLParsing COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> URLParsing)
add_test(NAME URLPermissionTest COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> URLPermissionTest)
add_test(NAME UnknownContentType COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> UnknownContentType)
add_test(NAME Unresolved COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> Unresolved)
add_test(NAME UppercaseScheme COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> UppercaseScheme)
add_test(NAME UseSTD3ASCIIRules COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> UseSTD3ASCIIRules)
add_test(NAME WhiteSpaceHostTest COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> WhiteSpaceHostTest)
add_test(NAME Wildcard COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> Wildcard)
add_test(NAME ZeroRedirects COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> ZeroRedirects)
add_test(NAME getResponseCode4HttpURLConnection COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> getResponseCode4HttpURLConnection)
add_test(NAME isSiteLocalAddress COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> isSiteLocalAddress)
add_test(NAME textToNumericFormat COMMAND $<TARGET_FILE:${JCPP_PROJECT_FULL_NAME}-test> textToNumericFormat)
