#machine generated

add_definitions(-DSTATIC_BUILD)
add_definitions(-D__USE_J2D_NAMES -D__MEDIALIB_OLD_NAMES -DMLIB_NO_LIBSUNMATH -DMLIB_OS64BIT)

if(JCPP_OS MATCHES "linux")
	add_definitions("-D_GNU_SOURCE")
endif()

include_directories("../../share/native/include")
include_directories("../../share/native/libawt/awt/image")
include_directories("../../share/native/libawt/awt/image/cvutils")
include_directories("../../share/native/libawt/awt/medialib")
include_directories("../../share/native/libawt/java2d")
include_directories("../../share/native/libawt/java2d/loops")
include_directories("../../share/native/libawt/java2d/pipe")
include_directories("../../share/native/common/awt")
include_directories("../../share/native/common/awt/debug")
include_directories("../../share/native/common/font")
include_directories("../../share/native/common/java2d/opengl")
include_directories("../../share/native/common/java2d/opengl/J2D_GL")
include_directories("../../share/native/libfontmanager")
include_directories("../../share/native/libharfbuzz")
include_directories("../../share/native/libjavajpeg")
include_directories("../../share/native/libjsound")
include_directories("../../share/native/liblcms")
include_directories("../../share/native/libmlib_image")
include_directories("../../share/native/libsplashscreen")
include_directories("../../share/native/libsplashscreen/giflib")
include_directories("../../share/native/libsplashscreen/libpng")

if(JCPP_OS MATCHES "linux")
	include_directories("include")
	include_directories("libawt/java2d")
	include_directories("common/awt")
	include_directories("common/awt/systemscale")
	include_directories("common/font")
	include_directories("common/java2d/opengl")
	include_directories("common/java2d/opengl/J2D_GL")
	include_directories("libfontmanager")
	include_directories("libjsound")
	include_directories("libsplashscreen")
	include_directories("libawt_xawt/awt")
	include_directories("libawt_xawt/xawt")
	include_directories("common/java2d/x11")
	include_directories("/usr/include/freetype2")
endif()

add_subdirectory("common")
add_subdirectory("include")
add_subdirectory("libawt")
add_subdirectory("libawt_headless")
add_subdirectory("libawt_xawt")
add_subdirectory("libfontmanager")
add_subdirectory("libjawt")
add_subdirectory("libjsound")
add_subdirectory("libsplashscreen")

include_directories("../../share/native")

aux_source_directory(. SRCS)
file(GLOB HEADERS *.h *.hpp)
source_group("Include" FILES ${HEADERS}) 
list(LENGTH SRCS SRCS_LENGTH)
if(SRCS_LENGTH)
	add_library(linux-native OBJECT ${SRCS} ${HEADERS})
	jcpp_enable_bigobj(linux-native)
endif()