#machine generated

add_definitions(-DSTATIC_BUILD)
add_definitions(-D__USE_J2D_NAMES -D__MEDIALIB_OLD_NAMES -DMLIB_NO_LIBSUNMATH -DMLIB_OS64BIT)

if(JCPP_OS MATCHES "macos")
	add_definitions("-DMACOSX")
	add_definitions("-DMAC_OS_X_VERSION_MIN_REQUIRED=110000")
	add_definitions("-mmacosx-version-min=11.00.00")
	add_definitions("-D_ALLBSD_SOURCE")
endif()

include_directories("../../share/native/include")
include_directories("../../share/native/libawt/awt/image")
include_directories("../../share/native/libawt/awt/image/cvutils")
include_directories("../../share/native/libawt/awt/medialib")
include_directories("../../share/native/libawt/java2d")
include_directories("../../share/native/libawt/java2d/loops")
include_directories("../../share/native/libawt/java2d/pipe")
include_directories("../../share/native/common/awt")
include_directories("../../share/native/common/awt/debug")
include_directories("../../share/native/common/font")
include_directories("../../share/native/common/java2d/opengl")
include_directories("../../share/native/common/java2d/opengl/J2D_GL")
include_directories("../../share/native/libfontmanager")
include_directories("../../share/native/libharfbuzz")
include_directories("../../share/native/libjavajpeg")
include_directories("../../share/native/libjsound")
include_directories("../../share/native/liblcms")
include_directories("../../share/native/libmlib_image")
include_directories("../../share/native/libsplashscreen")
include_directories("../../share/native/libsplashscreen/giflib")
include_directories("../../share/native/libsplashscreen/libpng")

if(JCPP_OS MATCHES "macos")
	include_directories("include")
	include_directories("libawt/java2d")
	include_directories("common/awt")
	include_directories("common/awt/systemscale")
	include_directories("libharfbuzz")
	include_directories("libjsound")
	include_directories("libsplashscreen")
	include_directories("libosxapp")
	include_directories("libawt_lwawt/awt")
	include_directories("libawt_lwawt/font")
	include_directories("libawt_lwawt/java2d/opengl")
	include_directories("libfreetype/include")
endif()

add_subdirectory("common")
add_subdirectory("include")
add_subdirectory("libawt")
add_subdirectory("libawt_lwawt")
add_subdirectory("libfreetype")
add_subdirectory("libharfbuzz")
add_subdirectory("libjawt")
add_subdirectory("libjsound")
add_subdirectory("libosx")
add_subdirectory("libosxapp")
add_subdirectory("libosxui")
add_subdirectory("libsplashscreen")

include_directories("../../share/native")

aux_source_directory(. SRCS)
file(GLOB HEADERS *.h *.hpp)
source_group("Include" FILES ${HEADERS}) 
list(LENGTH SRCS SRCS_LENGTH)
if(SRCS_LENGTH)
	add_library(macos-native OBJECT ${SRCS} ${HEADERS})
	jcpp_enable_bigobj(macos-native)
endif()