#machine generated

add_definitions(-DSTATIC_BUILD)
add_definitions(-D__USE_J2D_NAMES -D__MEDIALIB_OLD_NAMES -DMLIB_NO_LIBSUNMATH -DMLIB_OS64BIT)

if(JCPP_OS MATCHES "linux")
	add_definitions("-D_GNU_SOURCE")
endif()

if(JCPP_OS MATCHES "macos")
	add_definitions("-DMACOSX")
	add_definitions("-DMAC_OS_X_VERSION_MIN_REQUIRED=110000")
	add_definitions("-mmacosx-version-min=11.00.00")
	add_definitions("-D_ALLBSD_SOURCE")
endif()

include_directories("include")
include_directories("libawt/awt/image")
include_directories("libawt/awt/image/cvutils")
include_directories("libawt/awt/medialib")
include_directories("libawt/java2d")
include_directories("libawt/java2d/loops")
include_directories("libawt/java2d/pipe")
include_directories("common/awt")
include_directories("common/awt/debug")
include_directories("common/font")
include_directories("common/java2d/opengl")
include_directories("common/java2d/opengl/J2D_GL")
include_directories("libfontmanager")
include_directories("libharfbuzz")
include_directories("libjavajpeg")
include_directories("libjsound")
include_directories("liblcms")
include_directories("libmlib_image")
include_directories("libsplashscreen")
include_directories("libsplashscreen/giflib")
include_directories("libsplashscreen/libpng")

if(JCPP_OS MATCHES "linux")
	include_directories("../../linux/native/include")
	include_directories("../../linux/native/libawt/java2d")
	include_directories("../../linux/native/common/awt")
	include_directories("../../linux/native/common/awt/systemscale")
	include_directories("../../linux/native/common/font")
	include_directories("../../linux/native/common/java2d/opengl")
	include_directories("../../linux/native/common/java2d/opengl/J2D_GL")
	include_directories("../../linux/native/libfontmanager")
	include_directories("../../linux/native/libjsound")
	include_directories("../../linux/native/libsplashscreen")
	include_directories("../../linux/native/libawt_xawt/awt")
	include_directories("../../linux/native/libawt_xawt/xawt")
	include_directories("../../linux/native/common/java2d/x11")
	include_directories("/usr/include/freetype2")
endif()

if(JCPP_OS MATCHES "macos")
	include_directories("../../macos/native/include")
	include_directories("../../macos/native/libawt/java2d")
	include_directories("../../macos/native/common/awt")
	include_directories("../../macos/native/common/awt/systemscale")
	include_directories("../../macos/native/libharfbuzz")
	include_directories("../../macos/native/libjsound")
	include_directories("../../macos/native/libsplashscreen")
	include_directories("../../macos/native/libosxapp")
	include_directories("../../macos/native/libawt_lwawt/awt")
	include_directories("../../macos/native/libawt_lwawt/font")
	include_directories("../../macos/native/libawt_lwawt/java2d/opengl")
	include_directories("../../macos/native/libfreetype/include")
endif()

if(JCPP_OS MATCHES "windows")
	include_directories("../../windows/native/include")
	include_directories("../../windows/native/libawt/java2d")
	include_directories("../../windows/native/common/awt")
	include_directories("../../windows/native/common/awt/systemscale")
	include_directories("../../windows/native/libfontmanager")
	include_directories("../../windows/native/libharfbuzz")
	include_directories("../../windows/native/libjsound")
	include_directories("../../windows/native/libsplashscreen")
	include_directories("../../windows/native/libawt/java2d/d3d")
	include_directories("../../windows/native/libawt/java2d/opengl")
	include_directories("../../windows/native/libawt/java2d/windows")
	include_directories("../../windows/native/libawt/windows")
	include_directories("../../windows/native/libfreetype/include")
endif()

add_subdirectory("common")
add_subdirectory("include")
add_subdirectory("libawt")
add_subdirectory("libfontmanager")
add_subdirectory("libharfbuzz")
add_subdirectory("libjavajpeg")
add_subdirectory("libjsound")
add_subdirectory("liblcms")
add_subdirectory("libmlib_image")
add_subdirectory("libsplashscreen")

if(JCPP_OS MATCHES "linux")
	include_directories("../../linux/native")
endif()

if(JCPP_OS MATCHES "macos")
	include_directories("../../macos/native")
endif()

if(JCPP_OS MATCHES "windows")
	include_directories("../../windows/native")
endif()

aux_source_directory(. SRCS)
file(GLOB HEADERS *.h *.hpp)
source_group("Include" FILES ${HEADERS}) 
list(LENGTH SRCS SRCS_LENGTH)
if(SRCS_LENGTH)
	add_library(native OBJECT ${SRCS} ${HEADERS})
	jcpp_enable_bigobj(native)
endif()